--- a/StyleDictionary.xaml
+++ b/StyleDictionary.xaml
@@ -22,8 +22,15 @@
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Style.Triggers>
             <DataTrigger Binding="{Binding Path=IsPlayingFrom}" Value="True">
-                <Setter Property="Foreground" Value="{DynamicResource SecondaryAccent}"/>
+                <Setter Property="Foreground" Value="{DynamicResource PrimaryAccent}"/>
             </DataTrigger>
+        </Style.Triggers>
+    </Style>
+    <Style x:Key="NowPlaying" TargetType="{x:Type Label}" BasedOn="{StaticResource {x:Type Label}}">
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Foreground" Value="{DynamicResource SecondaryAccent}"/>
+            </Trigger>
         </Style.Triggers>
     </Style>
 
