--- a/PlaylistContentViewer/PlaylistContentViewer.xaml
+++ b/PlaylistContentViewer/PlaylistContentViewer.xaml
@@ -8,8 +8,8 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <ListView x:Name="listView" Grid.Column="1" SelectionMode="Single"  ItemsSource="{Binding Playlist.Tracks}"
-          Background="#323232" Foreground="#FFFFFF" TextSearch.TextPath="Title" Margin="-2"
-          BorderThickness="0" MouseDoubleClick="PlaylistContentViewer_MouseDoubleClick" MouseLeftButtonUp="PlaylistContentViewer_MouseLeftButtonUp">
+          Background="#323232" TextSearch.TextPath="Title" Margin="-2" BorderThickness="0" 
+          MouseDoubleClick="PlaylistContentViewer_MouseDoubleClick" MouseLeftButtonUp="PlaylistContentViewer_MouseLeftButtonUp" KeyDown="PlaylistContentViewer_KeyDown">
         <ListView.ContextMenu>
             <ContextMenu>
                 <MenuItem Header="Add to queue" Click="PlaylistContentViewer_AddToQueue"/>
